syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumOperand {
    int32 operand1 = 1;
    int32 operand2 = 2;
}

message SumRequest {
    SumOperand operand = 1;
}

message SumResponse {
    int64 sum = 1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse) {}
}